@@ -1,6 +1,10 @@
 /***********************************************************************
  X3 ChangeLog
 
+2006-07-09  Alex Schumann  <rubin@afternet.org>
+
+	* src/nickserv.c: Fixes for addignore/delignore corruption
+
 2006-07-10  Neil Spierling <sirvulcan@gmail.com>
 
 	* src/chanserv.c: INVITE now checks the targets ignore/silence list.
